<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_background">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/client_id_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_id_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/app_marker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_marker_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_id_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_id_signature_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/card_add_button"
            style="@style/ChatButtonStyle"/>

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_cancel_button"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"/>

    </LinearLayout>

</layout>