<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/rounded_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/text"
        tools:text="@string/card_delete_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="4dp"
            android:text="@string/card_delete_yes"
            style="@style/ChatButtonStyle"/>

        <Button
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/card_delete_no"
            style="@style/ChatButtonStyle"/>

    </LinearLayout>

</LinearLayout>